updated query processing and evaluation